--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "workspaces": [
+    "frontend",
+    "redi-web"
+  ],
+  "scripts": {
+    "build": "npm run build --workspaces",
+    "build:web": "cd redi-web && npm run build",
+    "dev": "npm run dev --workspaces"
+  },
   "devDependencies": {
     "prettier": "^3.6.2"
   }
