--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,4 @@
 [build]
-  command = "npm run build:web"
+  package = "redi-web"
+  command = "npm install && cd redi-web && npm install && npm run build"
+  publish = "redi-web/.next"
