--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  base = "redi-web"
+  package = "redi-web"
   command = "npm run build"
-  publish = ".next"
+  publish = "redi-web/.next"
