--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "build": "cd redi-web && npm install && npm run build",
+    "dev": "npm run dev --workspaces"
+  },
   "devDependencies": {
     "prettier": "^3.6.2"
   }
