--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -4,3 +4,10 @@
 
 expo-env.d.ts
 # @end expo-cli
+
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.production
+.env
