--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@types/react": "^19.1.15",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
@@ -25,7 +26,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
-    "@types/node": "^24.3.1",
+    "@types/node": "^24.6.0",
     "@types/node-fetch": "^2.6.13",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
