--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/node": "^24.6.0",
     "@types/node-fetch": "^2.6.13",
+    "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
