--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "build": "cd redi-web && npm install && npm run build",
     "dev": "npm run dev --workspaces",
-    "heroku-postbuild": "cd backend && npm install && npm run build"
+    "heroku-postbuild": "cd backend && npm run build"
   },
   "devDependencies": {
     "prettier": "^3.6.2"
