--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,11 @@
     "build": "tsc",
     "start": "node dist/src/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write \"src/**/*.{ts,js,json}\" \"scripts/**/*.{ts,js,json}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,js,json}\" \"scripts/**/*.{ts,js,json}\"",
+    "lint": "eslint \"src/**/*.{ts,js}\" \"scripts/**/*.{ts,js}\"",
+    "lint:fix": "eslint \"src/**/*.{ts,js}\" \"scripts/**/*.{ts,js}\" --fix"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +32,10 @@
     "@types/dotenv": "^6.1.1",
     "@types/node": "^24.6.0",
     "@types/node-fetch": "^2.6.13",
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
+    "eslint": "^9.36.0",
+    "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
