--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json}\" \"!node_modules/**\"",
+    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json}\" \"!node_modules/**\""
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -56,6 +58,7 @@
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
     "typescript": "~5.8.3"
   },
