--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "cors": "^2.8.5",
-    "expo": "~53.0.22",
+    "expo": "~53.0.23",
     "expo-auth-session": "~6.2.1",
     "expo-blur": "~14.1.5",
     "expo-build-properties": "~0.14.8",
@@ -31,7 +31,7 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
-    "expo-router": "^6.0.1",
+    "expo-router": "~5.1.7",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
@@ -42,11 +42,11 @@
     "firebase-admin": "^13.5.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.6",
+    "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "^4.16.0",
+    "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5"
   },
@@ -61,6 +61,10 @@
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
     "typescript": "~5.8.3"
+  },
+  "overrides": {
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "private": true
 }
