--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "list-emails": "ts-node scripts/list-emails.ts",
     "build": "tsc",
     "start": "node dist/src/index.js",
+    "heroku-postbuild": "npm run build",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write \"src/**/*.{ts,js,json}\" \"scripts/**/*.{ts,js,json}\"",
@@ -25,7 +26,8 @@
     "express": "^5.1.0",
     "firebase": "^12.2.1",
     "firebase-admin": "^13.5.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
@@ -37,7 +39,6 @@
     "eslint": "^9.36.0",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.2"
+    "ts-node-dev": "^2.0.0"
   }
 }
