--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-firebase/app": "^23.3.1",
     "@react-native-firebase/auth": "^23.3.1",
     "@react-native-firebase/firestore": "^23.3.1",
@@ -30,6 +31,7 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.7",
     "expo-splash-screen": "~0.30.10",
