--- a/frontend/ios/redi/GoogleService-Info.plist
+++ b/frontend/ios/redi/GoogleService-Info.plist
@@ -2,22 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CLIENT_ID</key>
-	<string>827839734794-ms5jes64lv5u1590imn34gnd4o9m7hj1.apps.googleusercontent.com</string>
-	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.827839734794-ms5jes64lv5u1590imn34gnd4o9m7hj1</string>
 	<key>API_KEY</key>
-	<string>AIzaSyD6BgonG1fzS4JnzrBpJpFgMp5JxA3eXQc</string>
+	<string>AIzaSyBZ4PVSAfiUFfWA4njqhEUhe0XXneDPj30</string>
 	<key>GCM_SENDER_ID</key>
-	<string>827839734794</string>
+	<string>272234540869</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.incubator.redi</string>
 	<key>PROJECT_ID</key>
-	<string>redi-fb4ea</string>
+	<string>redi-1c25e</string>
 	<key>STORAGE_BUCKET</key>
-	<string>redi-fb4ea.firebasestorage.app</string>
+	<string>redi-1c25e.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:827839734794:ios:43e2456a894f7f1582ebf3</string>
+	<string>1:272234540869:ios:04cb09e32812714afc182c</string>
 </dict>
 </plist>
