--- a/backend/functions/.gitignore
+++ b/backend/functions/.gitignore
@@ -11,4 +11,4 @@ node_modules/
 
 # Copied shared files (source of truth is in /backend/)
 src/services/matchingAlgorithm.ts
-types.ts
+src/types.ts
