--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -1,7 +1,8 @@
 {
   "name": "functions",
   "scripts": {
-    "lint": "eslint --ext .js,.ts .",
+    "lint": "eslint --ext .ts src",
+    "lint:fix": "eslint --ext .ts src --fix",
     "copy-shared": "cp ../src/services/matchingAlgorithm.ts ./src/services/matchingAlgorithm.ts && cp ../types.ts ./src/types.ts",
     "build": "npm run copy-shared && tsc",
     "build:watch": "tsc --watch",
@@ -21,13 +22,11 @@
     "firebase-functions": "^6.0.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "eslint": "^8.9.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.25.4",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.57.0",
     "firebase-functions-test": "^3.1.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.1.6"
   },
   "private": true
 }
