--- a/frontend/app.json
+++ b/frontend/app.json
@@ -42,7 +42,7 @@
         "expo-build-properties",
         {
           "ios": {
-            "useFrameworks": "static"
+            "useFrameworks": "dynamic"
           }
         }
       ],
