--- a/backend/package.json
+++ b/backend/package.json
@@ -26,8 +26,11 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
+    "express-validator": "^7.2.1",
     "firebase": "^12.2.1",
     "firebase-admin": "^13.5.0",
+    "helmet": "^8.1.0",
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
     "typescript": "^5.9.2",
