--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
     "start": "node dist/src/index.js",
     "heroku-postbuild": "npm run build",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "format": "prettier --write \"src/**/*.{ts,js,json}\" \"scripts/**/*.{ts,js,json}\"",
     "format:check": "prettier --check \"src/**/*.{ts,js,json}\" \"scripts/**/*.{ts,js,json}\"",
     "lint": "eslint \"src/**/*.{ts,js}\" \"scripts/**/*.{ts,js}\"",
@@ -39,12 +41,17 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^24.6.0",
     "@types/node-fetch": "^2.6.13",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
     "eslint": "^9.36.0",
+    "jest": "^29.7.0",
     "prettier": "^3.6.2",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0"
   }
