--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "lint": "eslint --ext .ts src",
     "lint:fix": "eslint --ext .ts src --fix",
-    "copy-shared": "cp ../src/services/matchingAlgorithm.ts ./src/services/matchingAlgorithm.ts && cp ../types.ts ./src/types.ts",
+    "copy-shared": "mkdir -p ./src/services && cp ../src/services/matchingAlgorithm.ts ./src/services/matchingAlgorithm.ts && cp ../src/services/matchingService.ts ./src/services/matchingService.ts && cp ../src/services/blockingService.ts ./src/services/blockingService.ts && cp ../types.ts ./src/types.ts && cp ../firebaseAdmin.ts ./src/firebaseAdmin.ts",
     "build": "npm run copy-shared && tsc",
     "build:watch": "tsc --watch",
     "serve": "npm run build && firebase emulators:start --only functions",
