--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -3,8 +3,8 @@
   "scripts": {
     "lint": "eslint --ext .ts src",
     "lint:fix": "eslint --ext .ts src --fix",
-    "copy-shared": "mkdir -p ./src/services && cp ../src/services/matchingAlgorithm.ts ./src/services/matchingAlgorithm.ts && cp ../src/services/matchingService.ts ./src/services/matchingService.ts && cp ../src/services/blockingService.ts ./src/services/blockingService.ts && cp ../types.ts ./src/types.ts && cp ../firebaseAdmin.ts ./src/firebaseAdmin.ts",
-    "build": "npm run copy-shared && tsc",
+    "copy-shared": "mkdir -p ./src/services && cp ../src/services/matchingAlgorithm.ts ./src/services/matchingAlgorithm.ts && cp ../src/services/matchingService.ts ./src/services/matchingService.ts && cp ../src/services/blockingService.ts ./src/services/blockingService.ts && cp ../src/services/promptsService.ts ./src/services/promptsService.ts && cp ../src/services/preferencesService.ts ./src/services/preferencesService.ts && cp ../types.ts ./src/types.ts && cp ../firebaseAdmin.ts ./src/firebaseAdmin.ts && sed -i.bak \"s|from '../../firebaseAdmin'|from '../firebaseAdmin'|g\" ./src/services/*.ts && sed -i.bak \"s|from '../../types'|from '../types'|g\" ./src/services/*.ts && rm -f ./src/services/*.bak ./src/*.bak",
+    "build": "npm run copy-shared && npm run lint:fix && tsc",
     "build:watch": "tsc --watch",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
@@ -18,6 +18,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1"
   },
