--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:integration": "jest --config jest.integration.config.js --runInBand",
+    "test:integration:watch": "jest --config jest.integration.config.js --watch --runInBand",
+    "test:cleanup": "ts-node src/__tests__/utils/cleanupTestData.ts",
     "format": "prettier --write \"src/**/*.{ts,js,json}\" \"scripts/**/*.{ts,js,json}\"",
     "format:check": "prettier --check \"src/**/*.{ts,js,json}\" \"scripts/**/*.{ts,js,json}\"",
     "lint": "eslint \"src/**/*.{ts,js}\" \"scripts/**/*.{ts,js}\"",
