--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@types/express": "^4.17.23",
     "@types/multer": "^2.0.0",
     "@types/react": "^19.1.15",
     "@types/uuid": "^10.0.0",
