--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,1 +1,5 @@
+# Use local backend (requires backend running on your machine)
 REACT_APP_API_BASE_URL=http://localhost:3001
+
+# Use production Heroku backend (no local backend needed)
+# REACT_APP_API_BASE_URL=https://redi-app-8ea0a6e9c3d9.herokuapp.com
