--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "helmet": "^8.1.0",
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.10",
     "typescript": "^5.9.2",
     "uuid": "^11.1.0"
   },
@@ -45,6 +46,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^24.6.0",
     "@types/node-fetch": "^2.6.13",
+    "@types/nodemailer": "^7.0.3",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
