--- a/frontend/ios/redi/GoogleService-Info.plist
+++ b/frontend/ios/redi/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>272234540869-6okghrkn79ub3kf6urj9h2jed3nmopel.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.272234540869-6okghrkn79ub3kf6urj9h2jed3nmopel</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBZ4PVSAfiUFfWA4njqhEUhe0XXneDPj30</string>
 	<key>GCM_SENDER_ID</key>
