--- a/frontend/ios/redi/Info.plist
+++ b/frontend/ios/redi/Info.plist
@@ -31,9 +31,15 @@
           <string>com.incubator.redi</string>
         </array>
       </dict>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>com.googleusercontent.apps.272234540869-6okghrkn79ub3kf6urj9h2jed3nmopel</string>
+        </array>
+      </dict>
     </array>
     <key>CFBundleVersion</key>
-    <string>1</string>
+    <string>2</string>
     <key>LSMinimumSystemVersion</key>
     <string>12.0</string>
     <key>LSRequiresIPhoneOS</key>
