--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,8 @@
     "helmet": "^8.1.0",
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
+    "rate-limit-redis": "^4.2.3",
+    "redis": "^5.9.0",
     "typescript": "^5.9.2",
     "uuid": "^11.1.0"
   },
@@ -49,6 +51,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^24.6.0",
     "@types/node-fetch": "^2.6.13",
+    "@types/redis": "^4.0.10",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
