--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,7 @@
     "expo-image": "~2.4.1",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
-    "expo-notifications": "^0.32.12",
+    "expo-notifications": "~0.31.4",
     "expo-router": "~5.1.7",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
