--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.1",
+    "expo-image-manipulator": "~13.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
     "expo-notifications": "~0.31.4",
