--- a/redi-web/package.json
+++ b/redi-web/package.json
@@ -13,7 +13,8 @@
     "firebase": "^12.2.1",
     "next": "15.5.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "recharts": "^3.4.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
