--- a/frontend/ios/redi/Info.plist
+++ b/frontend/ios/redi/Info.plist
@@ -39,7 +39,7 @@
       </dict>
     </array>
     <key>CFBundleVersion</key>
-    <string>2</string>
+    <string>3</string>
     <key>LSMinimumSystemVersion</key>
     <string>12.0</string>
     <key>LSRequiresIPhoneOS</key>
@@ -65,7 +65,8 @@
     <string>SplashScreen</string>
     <key>UIRequiredDeviceCapabilities</key>
     <array>
-      <string>arm64</string>
+      <string>armv7</string>
+      <string>telephony</string>
     </array>
     <key>UIRequiresFullScreen</key>
     <false/>
